# AgentProbe

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/core/: exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: chromadb_client.py  redis_client.py
backend/app/engine/: __init__.py  adversarial.py  environment.py  llm_client.py  persona.py  scenario_runner.py  tool_simulator.py  types.py  user_simulator.py
backend/app/evaluation/: __init__.py  aggregation.py  automated_metrics.py  calibration.py  elo.py  model_judge.py  pairwise_judge.py  reference_evaluator.py  reliability.py  rubric_grader.py  trajectory_evaluator.py  types.py
backend/app/models/: __init__.py  agent_config.py  base.py  conversation.py  eval_run.py  evaluation.py  metric.py  rubric.py  scenario.py  user.py
backend/app/pipeline/: events.py  producer.py  topics.py
backend/app/schemas/: agent_config.py  common.py  conversation.py  eval_run.py  evaluation.py  metric.py  rubric.py  scenario.py
backend/app/services/: agent_simulation.py  evaluation_service.py
backend/app/workers/: celery_app.py  evaluation_tasks.py  simulation_tasks.py
backend/tests/: conftest.py
backend/tests/unit/: test_adversarial.py  test_aggregation.py  test_automated_metrics.py  test_base_consumer.py  test_calibration.py  test_elo.py  test_evaluation_service.py  test_kafka_producer.py  test_model_judge.py  (+8 more)
(+34 files in other folders)
