[project]
name = "agentprobe"
version = "1.0.0"
description = "Multi-Turn Agent Evaluation Platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.0",
    # Redis
    "redis[hiredis]>=5.2.0",
    # Kafka
    "confluent-kafka>=2.6.0",
    # ChromaDB
    "chromadb>=0.5.0",
    # Celery
    "celery[redis]>=5.4.0",
    # AI — model-agnostic via LiteLLM (supports Ollama, Claude, OpenAI, Gemini)
    "litellm>=1.55.0",
    "anthropic>=0.39.0",
    # Logging
    "structlog>=24.4.0",
    # Utilities
    "uuid7>=0.1.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.12",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
